--- a/readme.org
+++ b/readme.org
@@ -62,7 +62,7 @@ aka nix package extensions or modifications
 
 ** clean up leftover applications
 
-when you recreate your system for the millionth time, you might end up with multiple applications that no longer represent what your config means should be the current one, meaning commands like `open -a <app name>` and "Open With" might open apps you no longer mean to have installed
+when you recreate your system for the millionth time, you might end up with multiple applications that no longer represent what your config means should be the current one, meaning commands like =open -a <app name>= and "Open With" might open apps you no longer mean to have installed
 
 you can see all these generations of systems with
 
